--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@color/lightBlue"
+    android:background="@drawable/gradient"
     tools:context=".entryModule.SplashScreenActivity">
 
     <ImageView
