--- a/app/src/main/res/layout/custom_toast_layout.xml
+++ b/app/src/main/res/layout/custom_toast_layout.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="@dimen/_20sdp"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/_10sdp"
+        android:layout_margin="@dimen/_5sdp"
         android:src="@drawable/logo" />
 
     <TextView
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Custom Toast Message"
+        android:layout_margin="@dimen/_5sdp"
         android:textColor="#FFFFFF"
         android:textSize="@dimen/_10ssp" />
 
