--- a/app/src/main/res/layout/activity_profile_show.xml
+++ b/app/src/main/res/layout/activity_profile_show.xml
@@ -133,6 +133,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/_5sdp"
             android:orientation="vertical">
 
             <TextView
@@ -140,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:text="Account Registered Date"
-                android:textSize="@dimen/_25ssp" />
+                android:textSize="@dimen/_18ssp" />
 
             <TextView
                 android:id="@+id/txtRegisterDate"
@@ -148,7 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:text="11:20:30 28/11/23"
-                android:textSize="@dimen/_20ssp" />
+                android:textSize="@dimen/_15ssp" />
 
         </LinearLayout>
 
@@ -166,6 +167,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/_5sdp"
             android:orientation="vertical">
 
             <TextView
@@ -173,7 +175,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:text="App Version"
-                android:textSize="@dimen/_25ssp" />
+                android:textSize="@dimen/_18ssp" />
 
             <TextView
                 android:id="@+id/txtVersion"
@@ -181,7 +183,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:text="v1.1"
-                android:textSize="@dimen/_20ssp" />
+                android:layout_marginTop="@dimen/_5sdp"
+                android:textSize="@dimen/_15ssp" />
 
         </LinearLayout>
 
