--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -14,6 +14,16 @@
         android:elevation="@dimen/_10sdp"
         app:cardCornerRadius="@dimen/_10sdp">
 
+        <ImageView
+            android:id="@+id/imgCancel"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_gravity="end"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:background="@color/red"
+            android:src="@drawable/baseline_cancel_24" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -300,23 +310,12 @@
                     android:id="@+id/imgPdf"
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
+                    android:layout_marginHorizontal="@dimen/_5sdp"
+                    android:layout_marginVertical="@dimen/_5sdp"
                     android:background="@color/blue"
                     android:paddingHorizontal="@dimen/_5sdp"
                     android:paddingVertical="@dimen/_5sdp"
-                    android:layout_marginHorizontal="@dimen/_5sdp"
-                    android:layout_marginVertical="@dimen/_5sdp"
                     android:src="@drawable/baseline_download_24" />
-
-                <ImageView
-                    android:id="@+id/imgSs"
-                    android:layout_width="@dimen/_40sdp"
-                    android:layout_height="@dimen/_40sdp"
-                    android:background="@color/blue"
-                    android:paddingHorizontal="@dimen/_5sdp"
-                    android:paddingVertical="@dimen/_5sdp"
-                    android:layout_marginVertical="@dimen/_5sdp"
-                    android:layout_marginHorizontal="@dimen/_5sdp"
-                    android:src="@drawable/baseline_screenshot_24" />
 
             </LinearLayout>
 
