--- a/app/src/main/res/layout/meeting_rooms_item.xml
+++ b/app/src/main/res/layout/meeting_rooms_item.xml
@@ -53,14 +53,19 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:layout_marginHorizontal="@dimen/_10sdp">
+                        android:layout_marginHorizontal="@dimen/_10sdp"
+                        android:layout_weight="1">
 
                         <TextView
                             android:id="@+id/txtName"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:ellipsize="marquee"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
+                            android:marqueeRepeatLimit="marquee_forever"
+                            android:singleLine="true"
                             android:text="Taj Hotel"
                             android:textColor="@color/white"
                             android:textSize="@dimen/_20sdp"
